--- a/docker/Dockerfile-nginx
+++ b/docker/Dockerfile-nginx
@@ -1,4 +1,4 @@
-FROM nginx:1.26.2-alpine
+FROM nginx:1.26.2
 COPY build/nginx/default.conf /etc/nginx/conf.d/
 
 RUN echo "upstream php-upstream { server fpm:9000; }" > etc/nginx/conf.d/upstream.conf
