--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    _instanceof:
+        App\Cqrs\CommandHandler:
+            tags:
+                - { name: messenger.message_handler, bus: command.bus }
+        App\Cqrs\QueryHandler:
+            tags:
+                - { name: messenger.message_handler, bus: query.bus }
