add first tests

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_SECRET=d0be535441955537fbde3f810eadf1e9
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-#DATABASE_URL="postgresql://english:!PasswordHere!@enteacher-database:5432/enteacher?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://userName:PasswordHere@enteacher-database:5432/enteacher?serverVersion=16&charset=utf8"
 
 ###> symfony/messenger ###
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
