--- a/composer.json
+++ b/composer.json
@@ -103,6 +103,8 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^7.1",
         "symfony/stopwatch": "7.1.*",
-        "symfony/web-profiler-bundle": "7.1.*"
+        "symfony/web-profiler-bundle": "7.1.*",
+        "zenstruck/foundry": "^2.0",
+        "zenstruck/messenger-test": "^1.10"
     }
 }
